TITAN2-1606 Fixed firefox display issue. Set components to be visible but disabled until checked.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -61,10 +61,14 @@ a:hover {
   @include inset-box-shadow;
 }
 
-.btn.disabled, .btn[disabled] {
-  border-color: lighten($light-grey, 3%);
+.btn.disabled, .btn[disabled], a.disabled, a[disabled] {
   color: darken($light-grey, 20%);
   cursor: default;
+  pointer-events: none;
+}
+
+.btn.disabled, .btn[disabled] {
+  border-color: lighten($light-grey, 3%);
   @include box-shadow(inset 2px 2px 3px 0px rgba(0,0,0,0.34));
 
   &:hover {
